<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered By JT</string>

    <!--String for on Boarding Screen-->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make a Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearly or with-in the specified city. We will display specific or all related shops to match your search</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform</string>
    <string name="third_slide_desc">If you have a shop or something and want to be a part of our growing industry then add your place by</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in yur pocket then yu don\'t have to worry</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--String for Dashboard-->

    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="education">Education</string>

    <!--Titles and Descriptions-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the Locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!--Titles CardView-->
    <string name="mcdonald">McDonald\'S</string>
    <string name="mcdonald_description">McDonald\'s is a fast food restaurant franchise. Its main products are hamburgers, french fries, breakfast menus and soft drinks</string>

    <!--nav menu-->
    <!--   <string name="home">Home</string>
    <!-    <string name="search">Search</string>
    <!-    <string name="all_categories">All Categories</string>
    <!-    <string name="add_missing_place">Add Missing Place</string>

    <!- <string name="login">Login</string>
    <!- <string name="profile">Profile</string>
    <!- <string name="logout">Logout</string>

    <!- <string name="share">Share</string>
    <!- <string name="rate_us">Rate Us</string>

    <!-categories activity-->
    <!--car rent-->
    <!--<string name="car_rent">Car Rent</string>
    <!-<string name="expand_all">Expand All</string> -->

    <!--hospital-->
    <string name="hospital">Hospitals</string>


    <!--retailer panel string-->
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remenber_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <!--general menu names-->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    <!--all categories menu names-->
    <string name="expand_all">Expand All</string>
    <string name="car_rent">Car Rent</string>
    <string name="all_shops">All Shops</string>

    <!--Login -->
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account_2">Create Account</string>

    <!--create account-->
    <string name="enter_full_name">Full Name</string>
    <string name="enter_username_create">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_password_create">Password</string>

    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Select Your Age</string>


</resources>